[package]
name = "doboom"
version = "0.1.0"
authors = ["zypeh <zypeh.geek@gmail.com>"]

[[bin]]
name = "doboom"
path = "src/main.rs"

[lib]
name = "database"
path = "src/database/lib.rs"

[dependencies]
url = "*"
time = "*"
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
tokio-core = "0.1"
futures = "0.1"
jsonwebtoken = "2"
rocket = "0.2.4"
rocket_codegen = "0.2.4"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
ring = "0.7.3"
dotenv = "0.8.0"
envy = "0.2.0"
r2d2 = "0.7.1"
r2d2-diesel = "0.12.0"
lazy_static = "0.2"

[dependencies.rocket_contrib]
version = "0.2.4"
default-features = false
features = ["json"]

[dependencies.diesel]
version = "0.12.0"
features = ["postgres"]

[dependencies.diesel_codegen]
version = "0.12.0"
features = ["postgres"]
